modules/eks/vpc_eks_igw.tf
resource "aws_internet_gateway" "eks_igw" {
    vpc_id = aws_vpc.eks_vpc.id
    tags = {
        Name = "${local.eid}-eks-igw"
    }
  
}
